--- a/index.html
+++ b/index.html
@@ -145,6 +145,25 @@
         .navbar-text {
             font-size: 0.9rem;
         }
+
+        /* Admin dashboard cards */
+        .admin-summary-card {
+            border-radius: 1rem;
+            padding: 1rem 1.2rem;
+            color: #fff;
+        }
+        .admin-summary-card h5 {
+            font-size: 0.95rem;
+            text-transform: uppercase;
+            letter-spacing: 0.05rem;
+        }
+        .admin-summary-card h3 {
+            margin: 0.4rem 0 0;
+        }
+        .admin-summary-card small {
+            font-size: 0.8rem;
+            opacity: 0.85;
+        }
     </style>
 </head>
 <body>
@@ -224,6 +243,11 @@
         <!-- ADMIN -->
         <div id="adminSection" style="display:none;">
             <h2 class="section-title"><i class="fas fa-tasks"></i> Manage Orders (Admin)</h2>
+
+            <!-- Admin dashboard summary -->
+            <div id="adminDashboard" class="mb-4"></div>
+
+            <!-- Existing admin orders table -->
             <div id="adminOrders"></div>
         </div>
     </div>
@@ -306,7 +330,7 @@
     <script>
         const STATUS_FLOW = ['pending', 'confirmed', 'preparing', 'on_transit', 'delivered'];
 
-        /* USING YOUR EXACT IMAGE NAMES & FORMATS */
+        /* YOUR FOOD PICTURES */
         const foodItems = [
             { id: 1, name: 'Chicken Kacchi Biryani', price: 210, description: 'Fragrant dum-cooked biryani with tender chicken', image: 'images/Hyderabadi Kacchi.jpg' },
             { id: 2, name: 'Chicken BBQ', price: 140, description: 'Smoky, tender grilled chicken', image: 'images/bbq.jpg' },
@@ -347,6 +371,7 @@
                         renderOrders();
                     }
                     if (document.getElementById('adminSection').style.display !== 'none') {
+                        renderAdminDashboard();
                         renderAdminOrders();
                     }
                 }
@@ -439,6 +464,10 @@
             const modalEl = document.getElementById('loginModal');
             const modal = bootstrap.Modal.getInstance(modalEl);
             modal.hide();
+
+            if (currentUser.role === 'admin') {
+                showSection('admin');
+            }
         }
 
         function showSection(section) {
@@ -467,6 +496,7 @@
                 renderOrders();
             } else if (section === 'admin') {
                 document.getElementById('adminSection').style.display = 'block';
+                renderAdminDashboard();
                 renderAdminOrders();
             }
         }
@@ -976,6 +1006,131 @@
             listEl.innerHTML = ordersHtml;
         }
 
+        /* ---------- ADMIN DASHBOARD (STATS) ---------- */
+
+        function calculateAdminStats() {
+            const stats = {
+                totalOrders: orders.length,
+                deliveredOrders: 0,
+                activeOrders: 0,
+                totalRevenue: 0,
+                todayRevenue: 0,
+                topItemName: '-',
+                topItemQty: 0
+            };
+
+            if (!orders.length) return stats;
+
+            const todayStr = new Date().toDateString();
+            const itemCount = {};
+
+            orders.forEach(function(order) {
+                if (order.status === 'delivered') {
+                    stats.deliveredOrders++;
+                    stats.totalRevenue += order.total;
+
+                    const orderDateStr = new Date(order.date).toDateString();
+                    if (orderDateStr === todayStr) {
+                        stats.todayRevenue += order.total;
+                    }
+                } else if (order.status === 'pending' ||
+                           order.status === 'confirmed' ||
+                           order.status === 'preparing' ||
+                           order.status === 'on_transit') {
+                    stats.activeOrders++;
+                }
+
+                order.items.forEach(function(it) {
+                    if (!itemCount[it.name]) itemCount[it.name] = 0;
+                    itemCount[it.name] += it.quantity;
+                });
+            });
+
+            // detect top selling item
+            Object.keys(itemCount).forEach(function(name) {
+                if (itemCount[name] > stats.topItemQty) {
+                    stats.topItemQty = itemCount[name];
+                    stats.topItemName = name;
+                }
+            });
+
+            return stats;
+        }
+
+        function renderAdminDashboard() {
+            const dashEl = document.getElementById('adminDashboard');
+
+            if (!currentUser || currentUser.role !== 'admin') {
+                dashEl.innerHTML = '';
+                return;
+            }
+
+            if (!orders.length) {
+                dashEl.innerHTML = `
+                    <div class="empty-state py-4">
+                        <i class="fas fa-box-open" style="font-size: 3rem; opacity: 0.3;"></i>
+                        <h5 class="mt-2 mb-0">No sales yet</h5>
+                        <small class="text-muted">Once orders are placed, you will see sales statistics here.</small>
+                    </div>
+                `;
+                return;
+            }
+
+            const stats = calculateAdminStats();
+
+            dashEl.innerHTML = `
+                <div class="row g-3">
+                    <div class="col-md-3 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#667eea,#764ba2);">
+                            <h5><i class="fas fa-receipt me-1"></i> Total Orders</h5>
+                            <h3>${stats.totalOrders}</h3>
+                            <small>Total number of orders received</small>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#28a745,#6fdb8b);">
+                            <h5><i class="fas fa-check-circle me-1"></i> Completed</h5>
+                            <h3>${stats.deliveredOrders}</h3>
+                            <small>Orders marked as delivered</small>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#fd7e14,#ffc107);">
+                            <h5><i class="fas fa-spinner me-1"></i> Active Orders</h5>
+                            <h3>${stats.activeOrders}</h3>
+                            <small>Pending / Confirmed / Preparing / On Transit</small>
+                        </div>
+                    </div>
+                    <div class="col-md-3 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#17a2b8,#20c997);">
+                            <h5><i class="fas fa-money-bill-wave me-1"></i> Total Revenue</h5>
+                            <h3>TK ${stats.totalRevenue.toFixed(2)}</h3>
+                            <small>Only from delivered orders</small>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row g-3 mt-2">
+                    <div class="col-md-6 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#6c757d,#adb5bd);">
+                            <h5><i class="fas fa-calendar-day me-1"></i> Today&apos;s Revenue</h5>
+                            <h3>TK ${stats.todayRevenue.toFixed(2)}</h3>
+                            <small>Revenue for orders delivered today</small>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-sm-6">
+                        <div class="admin-summary-card" style="background: linear-gradient(135deg,#ff5f6d,#ffc371);">
+                            <h5><i class="fas fa-fire me-1"></i> Top Selling Item</h5>
+                            <h3>${stats.topItemName}</h3>
+                            <small>Sold ${stats.topItemQty} item(s) in total</small>
+                        </div>
+                    </div>
+                </div>
+            `;
+        }
+
+        /* ---------- ADMIN ORDER TABLE (existing) ---------- */
+
         function renderAdminOrders() {
             const adminEl = document.getElementById('adminOrders');
 
@@ -1002,52 +1157,59 @@
             }
 
             const adminHtml = `
-                <div class="table-responsive">
-                    <table class="table table-hover align-middle">
-                        <thead class="table-light">
-                            <tr>
-                                <th>Order ID</th>
-                                <th>Customer</th>
-                                <th>Total (TK)</th>
-                                <th>Payment</th>
-                                <th>Current Status</th>
-                                <th>Change Status</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ${orders.map(function(order, index) {
-                                const paymentText = order.paymentMethod
-                                    ? order.paymentMethod + ' (' + (order.paymentStatus || 'pending') + ')'
-                                    : 'Not set';
-                                return `
+                <div class="card mt-3">
+                    <div class="card-header bg-light">
+                        <strong><i class="fas fa-list me-1"></i> All Orders</strong>
+                    </div>
+                    <div class="card-body p-0">
+                        <div class="table-responsive">
+                            <table class="table table-hover align-middle mb-0">
+                                <thead class="table-light">
                                     <tr>
-                                        <td>${order.id}</td>
-                                        <td>${order.customer && order.customer.name ? order.customer.name : 'Unknown'}</td>
-                                        <td>${order.total.toFixed(2)}</td>
-                                        <td>${paymentText}</td>
-                                        <td>
-                                            <span class="status-badge status-${order.status}">
-                                                ${order.status === 'on_transit' ? 'ON TRANSIT' : order.status.toUpperCase()}
-                                            </span>
-                                        </td>
-                                        <td style="max-width: 230px;">
-                                            <select class="form-select form-select-sm"
-                                                onchange="changeOrderStatus(${index}, this)">
-                                                ${STATUS_FLOW.map(function(st) {
-                                                    return `
-                                                    <option value="${st}" ${order.status === st ? 'selected' : ''}>
-                                                        ${st === 'on_transit'
-                                                            ? 'On Transit'
-                                                            : st.charAt(0).toUpperCase() + st.slice(1)}
-                                                    </option>`;
-                                                }).join('')}
-                                            </select>
-                                        </td>
+                                        <th>Order ID</th>
+                                        <th>Customer</th>
+                                        <th>Total (TK)</th>
+                                        <th>Payment</th>
+                                        <th>Current Status</th>
+                                        <th>Change Status</th>
                                     </tr>
-                                `;
-                            }).join('')}
-                        </tbody>
-                    </table>
+                                </thead>
+                                <tbody>
+                                    ${orders.map(function(order, index) {
+                                        const paymentText = order.paymentMethod
+                                            ? order.paymentMethod + ' (' + (order.paymentStatus || 'pending') + ')'
+                                            : 'Not set';
+                                        return `
+                                            <tr>
+                                                <td>${order.id}</td>
+                                                <td>${order.customer && order.customer.name ? order.customer.name : 'Unknown'}</td>
+                                                <td>${order.total.toFixed(2)}</td>
+                                                <td>${paymentText}</td>
+                                                <td>
+                                                    <span class="status-badge status-${order.status}">
+                                                        ${order.status === 'on_transit' ? 'ON TRANSIT' : order.status.toUpperCase()}
+                                                    </span>
+                                                </td>
+                                                <td style="max-width: 230px;">
+                                                    <select class="form-select form-select-sm"
+                                                        onchange="changeOrderStatus(${index}, this)">
+                                                        ${STATUS_FLOW.map(function(st) {
+                                                            return `
+                                                            <option value="${st}" ${order.status === st ? 'selected' : ''}>
+                                                                ${st === 'on_transit'
+                                                                    ? 'On Transit'
+                                                                    : st.charAt(0).toUpperCase() + st.slice(1)}
+                                                            </option>`;
+                                                        }).join('')}
+                                                    </select>
+                                                </td>
+                                            </tr>
+                                        `;
+                                    }).join('')}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
                 </div>
             `;
 
@@ -1080,6 +1242,7 @@
 
             orders[index].status = newStatus;
             saveToStorage();
+            renderAdminDashboard();
             renderAdminOrders();
 
             if (document.getElementById('ordersSection').style.display !== 'none') {
